--- a/book/bookdown-demo-master/bookdown-demo-master/docs/bookdown-demo.tex
+++ b/book/bookdown-demo-master/bookdown-demo-master/docs/bookdown-demo.tex
@@ -84,7 +84,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{2018-10-08}
+  \date{2018-10-24}
 
 \usepackage{booktabs}
 \usepackage{amsthm}
@@ -6884,7 +6884,9 @@ groups except the treatment being tested.
 Watch this
 \href{https://www.youtube.com/watch?v=IGDF1-B1Yjs\&feature=player_embedded}{6
 minute video from Cambridge University to learn a bit more about
-experimental crim}
+experimental crim} If you are on the BA Crim programme, you may have
+seen this video in your lecture for Criminal Justice in Action, when
+learning about how criminology has an impact.
 
 And then
 \href{http://www.cla.temple.edu/cj/center-for-security-and-crime-science/the-philadelphia-foot-patrol-experiment/}{this
@@ -6892,7 +6894,7 @@ video that describes the Philadelphia foot patrol experiment}. Pay
 attention to how the blocks are assigned to the treatment (foot patrol)
 and the control (normal, business as usual policing) groups.
 
-Do take the time to watch the videos above, they will help you
+\textbf{Do take the time to watch the videos above}, they will help you
 understand how and why we can use experiments in criminological
 research! Take time to get through these, it will help, but also I hope
 that they are interesting examples of criminological research in action!
@@ -7029,10 +7031,10 @@ separate the answer, so you don't accidentally read ahead:
 
 \includegraphics{https://media.giphy.com/media/RrFZIzK3coIMg/giphy.gif}
 
-Right so now you're hopefully read after your own consideration, and you
-may have found that your \textbf{dependent variable} is the one that
-depends on the intervention, which is - whether the young person exposed
-to the scared straight programme offends or not. So your
+Right so now you're hopefully reading on after your own consideration,
+and you may have found that your \textbf{dependent variable} is the one
+that depends on the intervention, which is - whether the young person
+exposed to the scared straight programme offends or not. So your
 \emph{dependent} variable is \emph{future offending}. This would have to
 be conceptualised (how far in the future, what counts as offending, etc)
 and then in turn operationalised, to be measured somehow.
@@ -7147,8 +7149,9 @@ exists between an intervention and outcome . The strength of the RCT
 lies in the process of randomisation that is unique to this type of
 research study design.
 
-\hypertarget{rct}{%
-\subsection{RCT}\label{rct}}
+\hypertarget{randomised-conrtol-trial-rct}{%
+\section{Randomised Conrtol Trial:
+RCT}\label{randomised-conrtol-trial-rct}}
 
 An RCT presents a study design that randomly assigns participants into
 an experimental group or a control group. As the study is conducted, the
@@ -7483,53 +7486,53 @@ guessing, this is the relative timeline that I've come up with:
 \begin{itemize}
 \tightlist
 \item
-  Background/review of published literature: 01/11/17 to 01/12/17
+  Background/review of published literature: 01/11/18 to 01/12/18
 \item
-  Formulation of hypotheses 01/12/17 07/12/17
+  Formulation of hypotheses 01/12/18 07/12/18
 \item
-  Set the objectives of the trial 02/12/17 08/12/17
+  Set the objectives of the trial 02/12/18 08/12/18
 \item
-  Development of a comprehensive study protocol 08/12/17 to 18/12/17
+  Development of a comprehensive study protocol 08/12/18 to 18/12/18
 \item
-  Ethical considerations 08/12/17 to 18/12/17
+  Ethical considerations 08/12/18 to 18/12/18
 \item
-  Sample size calculations 18/12/17 to 19/12/17
+  Sample size calculations 18/12/18 to 19/12/18
 \item
-  Define reference population 18/12/17 to 28/12/17
+  Define reference population 18/12/18 to 28/12/18
 \item
-  Define way variables will be measured 28/12/17 to 07/01/18
+  Define way variables will be measured 28/12/18 to 07/01/19
 \item
-  Choose comparison treatment (what happens to control group) 01/01/18
-  to 07/01/18
+  Choose comparison treatment (what happens to control group) 01/01/19
+  to 07/01/19
 \item
   Selection of intervention and control groups, including source,
-  inclusion and exclusion criteria, and methods of recruitment 18/01/18
-  to 21/01/18
+  inclusion and exclusion criteria, and methods of recruitment 18/01/19
+  to 21/01/19
 \item
-  Informed consent procedures 22/01/18 to 23/01/18
+  Informed consent procedures 22/01/19 to 23/01/19
 \item
   Collection of baseline measurements, including all variables
-  considered or known to affect the outcome(s) of interest 23/01/18 to
-  23/01/18
+  considered or known to affect the outcome(s) of interest 23/01/19 to
+  23/01/19
 \item
   Random allocation of study participants to treatment groups (standard
-  or placebo vs.~new) 21/01/18 to 23/01/18
+  or placebo vs.~new) 21/01/19 to 23/01/19
 \item
   Follow-up of all treatment groups, with assessment of outcomes
-  continuously or intermittently 24/01/18 to 23/01/19
+  continuously or intermittently 24/01/19 to 23/01/20
 \item
-  Descriptive analysis 24/01/19 to 24/02/19
+  Descriptive analysis 24/01/20 to 24/02/20
 \item
-  Comparison of treatment groups 30/01/19 to 24/02/19
+  Comparison of treatment groups 30/01/20 to 24/02/20
 \item
   Interpretation (assess the strength of effect, alternative
-  explanations such as sampling variation, bias) 20/02/19 to 20/03/19
+  explanations such as sampling variation, bias) 20/02/20 to 20/03/20
 \item
-  First draft 20/03/19 to 25/03/19
+  First draft 20/03/20 to 25/03/20
 \item
-  Get feedback \& make changes 25/03/19 to 05/04/19
+  Get feedback \& make changes 25/03/20 to 05/04/20
 \item
-  Final write-up of results 05/04/19 to 30/04/19
+  Final write-up of results 05/04/20 to 30/04/20
 \end{itemize}
 
 You should be able to copy this over into Excel if you roughly agree
@@ -7648,7 +7651,7 @@ but again, all you have to enter in that new window is the name and the
 values, the exact same way. Here is an illustrative example of what this
 will look like on PC:
 
-\includegraphics{https://www.officetimeline.com/Content/images/articles/gantt-chart/3_Select-Data-Start-Date-Added.png}
+\includegraphics{https://img.officetimeline.com/website/Content/images/articles/gantt-chart/3_select-data-start-date-added.png}
 
 Now click OK, and you will see some bars appear, reaching to each start
 date that we have. Now we have to add the \emph{duration}. To do this,
@@ -7693,12 +7696,23 @@ represent each task and the duration it lasts:
 
 \includegraphics{imgs/gantt_blue_cleared.png}
 
-But what is each task? I just see numbers? Well we need to add the
-labels, from the task column of your data, to give it some sort of
-meaning. To do this, once again right click anywhere on your chart area,
-and select ``Select Data\ldots{}'', and this time, for where it asks for
-axis labels, click in that box, and then highlight the column with the
-tasks in it:
+\textbf{NOTE}: you might have an issue where Excel starts counting at
+the year 1900 for some reason. In that case your chart might have looked
+like this:
+
+\includegraphics{imgs/1900_chart_default.JPG}
+
+In this case, you can fix this by editing the axis through right click,
+format axis, put in the correct minimum, like so:
+
+\includegraphics{imgs/Fixing_Gantt.JPG}
+
+Now you have a timeline for each task.. but how do you know what is each
+task? I just see numbers? Well we need to add the labels, from the task
+column of your data, to give it some sort of meaning. To do this, once
+again right click anywhere on your chart area, and select ``Select
+Data\ldots{}'', and this time, for where it asks for axis labels, click
+in that box, and then highlight the column with the tasks in it:
 
 \includegraphics{imgs/axis_labels_gantt.png}
 
@@ -7845,13 +7859,13 @@ two groups.
  So let's say we have our sample of people who will be assigned either
 to the treatment group, of recieving the scared straigh treatment, or
 the control group, who do not have to go through this treatment. Well
-let's say we have our class here. We've got a total of 58 students
+let's say we have our class here. We've got a total of 83 students
 enrolled in the class. Go ahead and download this list, from Blackboard.
 You can find it under week 5 \textgreater{} data \textgreater{}
 student.xlsx
 
 Once you have downloaded the data, open it with excel, and have a look
-at it. You can see that we have 58 rows, one for each student. You can
+at it. You can see that we have 83 rows, one for each student. You can
 also see that we have 3 variables: ID, Name, and Program.
 
 To assign people randomly to a group, we can use Excel's
@@ -7985,8 +7999,9 @@ You've built enough of these by now that you should be OK making this
 pivot table on your own, without guidance. If you get stuck on something
 though, let us know!
 
-If all goes well, your pivot table should let you know that you have 29
-students in your control group, and 29 students in your treatment group:
+If all goes well, your pivot table should let you know that you have
+either 41 or 42 students in your control group, and that minus 83 (your
+total) students in your treatment group:
 
 \includegraphics{imgs/freq_groups.png}
 
@@ -8008,164 +8023,6 @@ Now you've been exposed to either the treatment or the control
 condition. I'll be in touch in 12 months time to follow up, and find out
 about your offending behaviour. I'll report the results back in a paper.
 Science\ldots{}!
-
-\hypertarget{activity-3-stratified-randomisation}{%
-\subsection{Activity 3: Stratified
-randomisation}\label{activity-3-stratified-randomisation}}
-
-Randomization is important because it is almost the only way to assign
-all the other variables equally except for the factor (A and B) in which
-we are interested. However, some very important confounding variables
-can often be assigned unequally to the two groups. This possibility
-increases when the number of samples is smaller, and we can stratify the
-variables and assign the two groups equally in this case.
-
-For example, if the smoking status is very important, what will you do?
-First, we have our method of randomization that we learned previously.
-Just to put a name to this, the approach we had followed was
-\textbf{simple randomisation} There are two randomly assigned separate
-sequences for smokers and non-smokers. Smokers are assigned to the
-smoker's sequences, and non-smokers are assigned to the non-smoker's
-sequences. Therefore, both smokers and non-smokers groups will be placed
-equally with the same numbers.
-
-So we can use `simple randomization with/without stratification'.
-However, if there are multiple stratified variables, it is difficult to
-place samples in both groups equally with the same numbers. Usually two
-or fewer stratified variables are recommended.
-
- What does that look like? Well let's illustrate again with assigning
-you, the class, into control and treatment groups for the scared
-straight programme. Let's say that we knew that there was a different
-effect of Scared Straight possibly on those in BA Criminology and BA
-Social Sciences programme participants. This means that we've identified
-the \emph{program} variable to be a \textbf{confounding variable}. A
-confounding variable is an outside influence that changes the effect of
-a dependent and independent variable. To account for this, we want the
-same number of BA Crim and BA Social Science students in both groups.
-Because if we didn't control for this, it could be that through the
-random assignment alone, one group would have only BA Crim students, and
-the other have all the BA Social Science students. Now if we think that
-program is a \textbf{confounding variable}, in other words it's
-something that might influence our dependent variable, then we want to
-account for this, because otherwise, even if we find a difference
-between the two groups, we'll be unable to say whether it's due to the
-Scared Straigh intervention, or this variable of degree program!
-
-So how can we make sure that both BA Criminology and BA Social Sciences
-groups will be placed equally with the same numbers?
-
-Well to do this, you would go back to your random numbers that we
-created with the \texttt{=RAND()} function. The important thing here is,
-that you consider how we assigned people into control/treatment groups.
-We decided that everyone with a random number above the total group
-median gets treatment, and everyone below gets control. The total group
-median was used to divide the total group into two. So what do you think
-can be done to do this for 2 groups? You guessed it, \emph{you have to
-assign each group based on their own group median!}.
-
-There are two ways of doing this, the long manual hard way, or the easy
-lazy code way. Let's start with the code way.
-
-Just like before, we use an IF statement. Except this time the condition
-will change. Instead of saying, if this person's random score is above
-the median score for all students, we have to change it to say that ``if
-this person's random number is above the median \emph{for his/her
-group}'' then assign him/her to the treatment. Else assign him/her to
-the group. The important extra addition there is the \emph{for his/her
-group}. This means that we are changing what data to calculate the
-median from.
-
-We've calculated conditional medians before. Do you remember? This was
-in the third week, when we were carrying out bivariate analysis between
-a categorical and a numeric variable, and you had to calculate the
-median for each possible value of the categorical variable.
-
-Here we apply the exact same logic, but we select for each person to
-calculate the median for all the others who match his/her value for the
-program variable.
-
-The outer IF statement remains exactly the same procedure as it was for
-the one group, but now you are doing it for the two. This means that
-only your \emph{condition} in your ``IF'' statement changes. Remember
-our IF statement for assigning based on the total median?
-
-\texttt{=IF(D2\textgreater{}MEDIAN(D:D),\ "Treatment",\ "Control")}
-
-To change, we change only the condition. The condition here is the
-\texttt{D2\textgreater{}MEDIAN(D:D)} part. That part assesses whether
-the person's random number was above the total median. Well now we need
-to introduce another IF into this equation, to make sure that we are
-calculating the appropriate group median, for the program. So if they
-student's value for the program variable is BA Crim, we should calculate
-the crim median, and if it's BA Soc Sci, then we should calculate the
-soc sci median. Sounds familiar?
-
-So if total median is \texttt{MEDIAN(D:D)}, then our conditional mean
-calculation is\ldots{}:
-
-\texttt{MEDIAN(IF(C2=C2:C59,\ D2:D59))}
-
-Where you are saying, if the cell value of C2 (so the program for the
-person in row 2) is equal to the values in the program column (c
-column), then include those random numbers in the calculation of the
-median. So if you just replace the median statement from the initial IF
-with this, creating a new condition, like so:
-
-\texttt{D2\ \textgreater{}\ MEDIAN(IF(C2=C2:C59,\ D2:D59))}
-
-And now, all you need to do, is plug in this new condition into your
-outer IF statement:
-
-\texttt{=IF(D2\ \textgreater{}\ MEDIAN(IF(C2=C2:C59,\ D2:D59)),\ "Treatment",\ "Control")}
-
-Don't forget to add your dollar signs, for copy and pasting the formula:
-
-\texttt{=IF(D2\ \textgreater{}\ MEDIAN(IF(C2=\$C\$2:\$C\$59,\ \$D\$2:\$D\$59)),\ "Treatment",\ "Control")}
-
-And also don't forget to hit \texttt{Ctrl} + \texttt{Shift} +
-\texttt{Enter} instead of \emph{just} Enter.
-
-You should get, for each person, an evaluation against the median of the
-particular group that this person belongs to. Again you can check
-whether or not this has worked, in terms of assigning half the people to
-treatment and the other half to control, by producing a pivot table to
-look at the frequency of the stratified group variable, that you've now
-created.
-
-You might notice that your pivot table shows a no longer even
-distribution between the groups:
-
-\includegraphics{imgs/uneven_pivot.png}
-
-Take a moment to think about why this might be? Maybe consider the
-number of people in each group. Is this an even or an odd number? In the
-event that there is an odd number, then when you divide the data into
-half, since we are splitting people, you will end up with one group
-larger than the other (by 1 person). Unless someone volunteers to be
-split in half, and half of them being put in one group, and the other
-half in the other, this can happen. So what can you do? Well I'll leave
-this here as something for you to think about. If you have an idea, or
-if you have no idea, and want to discuss, raise your hand now, we will
-come around to talk through it.
-
-But create a bivariate frequency table though, using your stratified
-group variable and the program variable:
-
-\includegraphics{imgs/biv_prog_tc.png}
-
-You can see that both BA Crim and BA Soc Sci are split about half and
-half, assigned into treatment and control.
-
-What about using the other treatment/control grouping, the one where we
-\textbf{did not} stratify by programme?
-
-You will all have different results here, since it's randomly assigned,
-but it's possible that for some of you BA Soc Sci might be
-overrepresented in one group versus the other. If this were the case,
-and we knew (or suspected) that this variable of what program you're
-enrolled in had an effect on offending behaviour, then this might
-influence the validity and generalisability from your study.
 
 \hypertarget{freeze}{%
 \subsection{Freeze!}\label{freeze}}
@@ -8419,8 +8276,8 @@ from blackboard. You can find them labelled wave\_1.xlsx, wave\_2.xlsx,
 and wave\_3.xlsx in the data folder for this week on BB. Download all
 three onto your computer, and open them up in excel.
 
-\hypertarget{activity-4-linking-data}{%
-\subsection{Activity 4: Linking data}\label{activity-4-linking-data}}
+\hypertarget{activity-3-linking-data}{%
+\subsection{Activity 3: Linking data}\label{activity-3-linking-data}}
 
 So hopefully if I've taught you anything about the structure of data, is
 that you have \emph{all} your observations in your rows and \emph{all}
@@ -8855,9 +8712,9 @@ answer, the median income of the complete cases will be biased. This is
 something to keep in mind when choosing the route of complete case
 analysis.
 
-\hypertarget{activity-5-selecting-complete-cases}{%
-\subsection{Activity 5: Selecting Complete
-Cases}\label{activity-5-selecting-complete-cases}}
+\hypertarget{activity-4-selecting-complete-cases}{%
+\subsection{Activity 4: Selecting Complete
+Cases}\label{activity-4-selecting-complete-cases}}
 
 But how can we include only the compete cases? Well for this you can use
 the filter function of Excel. Remember the little funnel icon? Well if
