--- a/book/bookdown-demo-master/bookdown-demo-master/packages.bib
+++ b/book/bookdown-demo-master/bookdown-demo-master/packages.bib
@@ -36,9 +36,10 @@
 }
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
-  author = {Hadley Wickham and Winston Chang},
-  note = {http://ggplot2.tidyverse.org, https://github.com/tidyverse/ggplot2},
+  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo},
   year = {2018},
+  note = {R package version 3.0.0},
+  url = {https://CRAN.R-project.org/package=ggplot2},
 }
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
