--- a/book/bookdown-demo-master/bookdown-demo-master/docs/bookdown-demo.tex
+++ b/book/bookdown-demo-master/bookdown-demo-master/docs/bookdown-demo.tex
@@ -84,7 +84,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{2018-10-24}
+  \date{2018-11-05}
 
 \usepackage{booktabs}
 \usepackage{amsthm}
@@ -9012,16 +9012,16 @@ grammar of graphics. Journal of Computational and Graphical Statistics,
 
 You have a table such as:
 
-\includegraphics{/Users/reka/Desktop/course-incubator/images/table.png}
+\includegraphics{imgs/table.png}
 
 You then want to plot this. To do so, you want to create a plot that
 combines the following layers:
 
-\includegraphics{/Users/reka/Desktop/course-incubator/images/layers.png}
+\includegraphics{imgs/layers.png}
 
 This will result in a final plot:
 
-\includegraphics{/Users/reka/Desktop/course-incubator/images/combined.png}
+\includegraphics{imgs/combined.png}
 
 \begin{quote}
 We often call graphics charts (from or Latin charta, a leaf of paper or
@@ -9082,7 +9082,7 @@ edges. The data-ink ratio is the proportion of Ink that is used to
 present actual data compared to the total amount of ink (or pixels) used
 in the entire display. (Ratio of Data-Ink to non-Data-Ink).
 
-\includegraphics{http://www.infovis-wiki.net/images/thumb/5/55/DIR.jpg/600px-DIR.jpg}
+\includegraphics{imgs/data_ink_ratio.jpg}
 
 Good graphics should include only data-Ink. Non-Data-Ink is to be
 deleted everywhere where possible. The reason for this is to avoid
@@ -9091,18 +9091,18 @@ elements. The goal is to design a display with the highest possible
 data-ink ratio (that is, as close to the total of 1.0), without
 eliminating something that is necessary for effective communication.
 
-\#\#\#~An example:
+\#\#\#~ An example:
 
 This is an example of a graph with a low Data-Ink Ratio:
 
-\includegraphics{http://www.infovis-wiki.net/images/thumb/2/2e/Dir1.png/400px-Dir1.png}
+\includegraphics{imgs/low_data_ink_ratio.png}
 
 The border around the graph, the background color and the grid lines are
 all unnecessary data ink.
 
 Now an example of a graph with a high Data-Ink Ratio:
 
-\includegraphics{http://www.infovis-wiki.net/images/thumb/1/1b/Dir2.png/400px-Dir2.png}
+\includegraphics{imgs/high_data_ink_ratio.png}
 
 We have deleted the border around the graph, the background color and
 the grid lines and have thus drawn the viewer's attention to horizontal
