--- a/book/bookdown-demo-master/bookdown-demo-master/docs/bookdown-demo.tex
+++ b/book/bookdown-demo-master/bookdown-demo-master/docs/bookdown-demo.tex
@@ -84,7 +84,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{2018-11-05}
+  \date{2018-11-13}
 
 \usepackage{booktabs}
 \usepackage{amsthm}
@@ -10444,7 +10444,7 @@ American police data on the other hand is much more granular.
 
  Cities release their own data. Here, we will be looking at crimes from
 Dallas, Texas.
-\href{https://www.dallasopendata.com/Public-Safety/All-Crime/p9zb-d4n6/about}{You
+\href{https://www.dallasopendata.com/Public-Safety/Police-Bulk-Data/ftja-9jxd}{You
 can see more about these data, and find the download link to the data
 dictionary here}. You can download a subset of Dallas crime data from
 blackboard. Go to course content \textgreater{} week 7 \textgreater{}
@@ -10520,7 +10520,7 @@ So which year had the most residential burglaries?
 
 \includegraphics{https://media.giphy.com/media/8nZnnnvX5A4so/giphy.gif}
 
-TO answer this question, hopefully you built a pivot table with the year
+To answer this question, hopefully you built a pivot table with the year
 variable, and your table look should like this:
 
 \includegraphics{imgs/count_of_yr.png}
@@ -10975,8 +10975,9 @@ lights in your house.
 \includegraphics{http://dougmccune.com/blog/wp-content/uploads/2011/04/real_life_time_pie-150x150.png}
 
 This above is known as a radial chart. We will now learn how to build
-one in Excel. But before we do, I wanted to tell you guys the story of
-Florence Nightingale, the original data visualisation pioneer. I know, I
+one in Excel. But before we do, I wanted to remind you guys the story of
+Florence Nightingale, the original data visualisation pioneer (I spoke
+about her in the lecture about data visualusation on Tuesday). I know, I
 know, we covered data visualisation last week, can I please get over it.
 But it's one of the most fun aspects of data analysis so no, I cannot,
 and now I will tell you about why Florence Nightingale wasn't just a
